--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic-typescript-boilerplate",
+  "name": "typescript-boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
