--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "build": "rimraf ./build && tsc",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
-    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+    "prettier-format": "prettier --config .prettierrc \"src/**/*.ts\" --write",
+    "prettier-watch": "onchange 'src/**/*.ts' -- prettier --write {{changed}}"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier-format && npm run lint"
+    }
   },
   "author": "Olusegun O. Ekoh <segun.ekoh@gmail.com>",
   "license": "ISC",
@@ -22,6 +28,7 @@
     "eslint-plugin-prettier": "3.1.4",
     "husky": "4.2.5",
     "nodemon": "2.0.4",
+    "onchange": "7.0.2",
     "prettier": "2.0.5",
     "rimraf": "3.0.2",
     "ts-node": "8.10.2",
