--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["@typescript-eslint", "no-loops", "prettier"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
@@ -9,6 +9,7 @@
     "prettier"
   ],
   "rules": {
+    "no-loops/no-loops": 2, // error
     "no-console": 0, // off
     "prettier/prettier": 2
   }
